# webos-fluentbit-plugins

./: .gitignore  CMakeLists.txt  README.md
files/conf/: coredump_webos.conf  fluent-bit_ose_official.conf  fluent-bit_ose_unofficial.conf  fluent-bit_webos.conf  fluent-bit_webos_official.conf  fluent-bit_webos_unofficial.conf  jira_webos.conf  plugins_webos.conf
files/sysbus/: com.webos.rdx.api.json  com.webos.rdx.groups.json  com.webos.rdx.perm.json  com.webos.rdx.role.json.in  com.webos.rdx.service.in  com.webos.service.bugreport.groups.json  com.webos.service.bugreport.perm.json  com.webos.service.bugreport.role.json.in
files/sysbus_new/: com.webos.service.bugreport.api.json  com.webos.service.bugreport.groups.json  com.webos.service.bugreport.role.json.in  com.webos.service.bugreport.service.in
inotify_coredump_test/: CMakeLists.txt  inotify_coredump_test.cpp
input_simulator/: CMakeLists.txt  Main.cpp
plugins/: CMakeLists.txt
plugins/common/: Environment.h.in  FluentBit.h
plugins/common/bus/: LunaHandle.cpp  LunaHandle.h
plugins/common/interface/: IClassName.h  IInitializable.h  ISerializable.h  ISingleton.h  ITimestamp.h
plugins/common/util/: BuildInfo.cpp  BuildInfo.hpp  ErrCode.cpp  ErrCode.h  File.cpp  File.h  JValueUtil.cpp  JValueUtil.h  LinuxUtil.cpp  LinuxUtil.h  Logger.cpp  Logger.h  MSGPackUtil.cpp  MSGPackUtil.h  PluginConf.cpp  PluginConf.h  StringUtil.cpp  StringUtil.h  Time.cpp  Time.h
plugins/filter_webos_systemd/: CMakeLists.txt  Handler.cpp  Handler.h  PerfRecord.cpp  PerfRecord.h  PerfRecordList.cpp  PerfRecordList.h  WebOSSystemdFilter.cpp  WebOSSystemdFilter.h  handler.cpp  handler.h  webos_systemd.c  webos_systemd.h
plugins/in_bugreport/: BugreportConfigManager.cpp  BugreportConfigManager.h  BugreportHandler.cpp  BugreportHandler.h  BugreportScreenshotManager.cpp  BugreportScreenshotManager.h  CMakeLists.txt  bugreport.c
plugins/in_coredump/: CMakeLists.txt  CoredumpHandler.cpp  CoredumpHandler.h  Environment.h.in  Util.cpp  coredump.c  coredump.h  in_coredump.c  in_coredump.h
plugins/in_crashinfo/: CMakeLists.txt  CrashinfoHandler.cpp  CrashinfoHandler.h  crashinfo.c  crashinfo.h
plugins/out_crashinfo/: CMakeLists.txt  CrashinfoHandler.cpp  CrashinfoHandler.h  crashinfo.c  crashinfo.h
plugins/out_jira/: CMakeLists.txt  JiraHandler.cpp  JiraHandler.h  jira.c  jira.h
python3-webos/: CMakeLists.txt  webos_capture.py  webos_common.py  webos_config_1.json  webos_config_1_base.json  webos_issue.py  webos_sysinfo.py  webos_uploader.py
scripts/: jira_report.json  jira_report.py  webos_info.py  webos_jira.py  webos_jira_ro.json  webos_rdx.json  webos_uploader.py
scripts/base/: nyx.py  platform.py
scripts/util/: config.py  connection.py  logger.py
src/: CMakeLists.txt
src/coredump_example/: CMakeLists.txt  CoreExample.cpp
src/filter_webos_systemd/: CMakeLists.txt  handler.cpp  handler.h  webos_systemd.c
src/in_coredump/: CMakeLists.txt  Environment.h.in  in_coredump.c  in_coredump.h
src/out_jira/: CMakeLists.txt  jira.c  mypython.py  print.py
src/out_jira/a/: jira.c  jira.h
